# solocoder-5551-rust-fs

./: Cargo.toml  build_final.txt  build_new.txt  build_output.txt  build_release.txt
src/: chunk.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  manifest.rs  progress.rs  retry.rs  state.rs  sync.rs  util.rs
src/transport/: http.rs  local.rs  mod.rs  sftp.rs
test_src/: file1.txt
tmp/: fix-5-records-rounds.js
