[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.36", features = ["full"] }
indicatif = "0.17"
sha2 = "0.10"
crc32fast = "1.4"
walkdir = "2.5"
globset = "0.4"
ssh2 = "0.9"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
warp = "0.3"
bytes = "1.5"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
num_cpus = "1.16"
async-trait = "0.1"

